[tool.poetry]
name = "axie-breeding-calculator"
version = "0.1.0"
description = ""
authors = ["Evan Aromin <evan@avendael.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
tox = "^3.24.0"
ipython = "^7.25.0"
pytest-cov = "^2.12.1"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
