[tool.poetry]
authors = ["Evan Aromin <evan@avendael.com>"]
description = "Profit calculators for Axie Infinity."
name = "axie-money"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
ipdb = "^0.13.9"
ipython = "^7.25.0"
pytest = "^5.2"
pytest-cov = "^2.12.1"
tox = "^3.24.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
